# researchflow-agent

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  app.py  config.py  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: tests.yml
docs/: API_REFERENCE.md  DEMO_RECORDING_GUIDE.md  EXPERIMENT_RUNNER.md  PROJECT_OVERVIEW.md  PROJECT_STRUCTURE.md  REPRODUCTION_WORKFLOW.md  ROADMAP.md  SAFETY.md  TROUBLESHOOTING.md  demo_guide.md  evaluation_report.md  project_showcase.md  project_summary.md  technical_overview.md
examples/: demo_results.md  demo_workflows.md  evaluation_benchmark.json  paper_eval_questions.json  validation_results.md  validation_workflows.md
examples/reproduction_demo/: sample_paper_excerpt.md
scripts/: run_demo_benchmark.py  run_evaluation_benchmark.py  run_manual_evaluation_template.py  run_reproduction_demo.py
src/agent/: __init__.py  planner.py  workflow.py
src/rag/: qa.py  (+4 more)
tests/: conftest.py  test_chunking.py  test_code_analyzer.py  test_command_planner.py  test_config.py  test_demo_benchmark_script.py  test_embeddings_vectorstore.py  test_evaluation_benchmark_script.py  test_evaluation_experiment.py  test_log_parser.py  test_manual_evaluation_template.py  test_paper_result_extraction.py  test_parser.py  test_planner_report.py  test_professional_language.py  test_qa_formatting.py  test_rag_integration.py  test_reproduction_demo.py  test_reproduction_report.py  test_reranker.py  test_result_comparator.py  test_runner.py  test_verifier.py  test_verifier_reproduction.py  test_workflow.py
(+29 files in other folders)
