[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "researchflow-agent"
version = "0.1.0"
description = "A paper-grounded research workflow agent with evidence-aware reproduction tooling."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
  "gradio>=4.44.0,<7",
  "PyMuPDF>=1.24.0,<2",
  "pdfplumber>=0.11.0,<1",
  "sentence-transformers>=3.0.0,<6",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0,<10",
  "pytest-cov>=5.0.0,<8",
]

[tool.setuptools]
py-modules = ["app", "config"]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
